Re-add visibility: hidden to fix double checkboxes

--- a/resources/less/forum.less
+++ b/resources/less/forum.less
@@ -1,5 +1,6 @@
 label.extendedmarkdown--checkbox
   > input[type="checkbox"].extendedmarkdown--checkbox-input {
+  visibility: hidden;
   margin-right: 8px;
   position: relative;
 }
